Changed openjdk to oracle